Backend/Deployment/Dev/envoy/api-gateway.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_https
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 443

      listener_filters:
        - name: envoy.filters.listener.tls_inspector
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector

      filter_chains:
        - filter_chain_match:
            server_names:
              - "backend.learn-dot-net.dev"

          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/envoy/certificates/api-gateway.cert.pem
                    private_key:
                      filename: /etc/envoy/certificates/api-gateway.key.pem

          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http

                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: services
                      domains:
                        - "backend.learn-dot-net.dev:60000"

                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: api_gateway

                          request_headers_to_add:
                            - header:
                                key: x-forwarded-proto
                                value: https
                            - header:
                                key: x-forwarded-port
                                value: "60000"

                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: api_gateway
      connect_timeout: 5s
      type: logical_dns # logical_dns strict_dns
      lb_policy: round_robin # round_robin ring_hash
      dns_lookup_family: V4_ONLY

      load_assignment:
        cluster_name: api_gateway
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: backend
                    port_value: 60001

      health_checks:
        - timeout: 3s
          interval: 10s
          unhealthy_threshold: 3
          healthy_threshold: 2
          http_health_check:
            path: "/health/ready"
